# backend/auth-service/src/main/java/zalord/auth_service/dto/event/UserCreatedEvent.java
@@ -4,6 +4,7 @@ import java.util.UUID;
 
 public record UserCreatedEvent(
         UUID userId,
-        String displayName
+        String displayName,
+        String phoneNumber
 ) {
 }
